temp/objects/Asset_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipName>Asset_Assingments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AssigneeEmail__c</fullName>
        <label>Assignee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipName>Asset_Assingments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignerEmail__c</fullName>
        <label>Assigner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigner</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Asset Assignments (Assignor)</relationshipLabel>
        <relationshipName>Asset_Assingments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Asset Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Asset Assignment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>